main/default/objects/Business_Activity__c/Business_Activity__c.object-meta.xml
<CustomObject>
    <label>Business Activity</label>
    <nameField>
        <displayFormat>BizAct-{00000}</displayFormat>
        <label>Business Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>