main/default/objects/Business_Activity__c/fields/Aligned_Capex_B__c.field-meta.xml
<CustomField>
    <fullName>Aligned_Capex_B__c</fullName>
    <label>Aligned Capex B</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>