main/default/objects/Business_Activity__c/fields/Aligned_Opex_C__c.field-meta.xml
<CustomField>
    <fullName>Aligned_Opex_C__c</fullName>
    <label>Aligned Opex C</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>