main/default/objects/Business_Activity__c/fields/Aligned_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Aligned_Turnover__c</fullName>
    <label>Aligned Turnover</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>