main/default/objects/Business_Activity__c/fields/Capex_B_EUR__c.field-meta.xml
<CustomField>
    <fullName>Capex_B_EUR__c</fullName>
    <description>Type B: part of a plan to expand Taxonomy-aligned economic activities or to allow Taxonomy-eligible economic activities to become Taxonomy-aligned under conditions specified in the Delegated Act (where turnover is eligible but not aligned)</description>
    <inlineHelpText>Type B: part of a plan to expand Taxonomy-aligned economic activities or to allow Taxonomy-eligible economic activities to become Taxonomy-aligned under conditions specified in the Delegated Act (where turnover is eligible but not aligned)</inlineHelpText>
    <label>Capex B</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>