main/default/objects/Business_Activity__c/fields/Capex_C_EUR__c.field-meta.xml
<CustomField>
    <fullName>Capex_C_EUR__c</fullName>
    <description>Type C: Related to the purchase of output from Taxonomy-aligned economic activities and individual measures enabling the target activities to become low-carbon or to lead to greenhouse gas reductions, provided that such measures are implemented and operational within 18 months (where turnover is not eligible nor aligned).</description>
    <inlineHelpText>Type C: Related to the purchase of output from Taxonomy-aligned economic activities and individual measures enabling the target activities to become low-carbon or to lead to greenhouse gas reductions, provided that such measures are implemented and operational within 18 months (where turnover is not eligible nor aligned).</inlineHelpText>
    <label>Capex C</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>