main/default/objects/Business_Activity__c/fields/Contribution__c.field-meta.xml
<CustomField>
    <fullName>Contribution__c</fullName>
    <label>Contribution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Enabling</fullName>
            </value>
            <value>
                <fullName>Transitional</fullName>
            </value>
            <value>
                <fullName>Own Performance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>