main/default/objects/Business_Activity__c/fields/Environmental_Objective__c.field-meta.xml
<CustomField>
    <fullName>Environmental_Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Environmental Objective</label>
    <referenceTo>Environmental_Objective__c</referenceTo>
    <relationshipLabel>Aligned Activities</relationshipLabel>
    <relationshipName>Business_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>