main/default/objects/Business_Activity__c/fields/EU_Taxonomy_Disclosure__c.field-meta.xml
<CustomField>
    <fullName>EU_Taxonomy_Disclosure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EU Taxonomy Disclosure</label>
    <referenceTo>EU_Taxonomy_Disclosure__c</referenceTo>
    <relationshipLabel>Business Activities</relationshipLabel>
    <relationshipName>Business_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>