main/default/objects/Business_Activity__c/fields/Linked_Economic_Activity__c.field-meta.xml
<CustomField>
    <fullName>Linked_Economic_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Economic Activity</label>
    <referenceTo>Economic_Activity__c</referenceTo>
    <relationshipLabel>Business Activities</relationshipLabel>
    <relationshipName>Linked_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>