main/default/objects/Business_Activity__c/fields/Nace_Activity__c.field-meta.xml
<CustomField>
    <fullName>Nace_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nace Activity</label>
    <referenceTo>Nace_sectors__c</referenceTo>
    <relationshipLabel>Business Activities</relationshipLabel>
    <relationshipName>Business_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>