main/default/objects/Business_Activity__c/fields/Opex_A_EUR__c.field-meta.xml
<CustomField>
    <fullName>Opex_A_EUR__c</fullName>
    <description>Type A: related to assets or processes that are associated with Taxonomy-aligned economic activities (where turnover is aligned);</description>
    <inlineHelpText>The Opex KPI is defined as the share of Taxonomy-aligned operating expenditures (Opex) in the numerator, divided into three categories (a – c) as defined in the Disclosures Delegated Act, divided by the total Opex (in the denominator). The three classifications of OpEx are:

Type A: related to assets or processes that are associated with Taxonomy-aligned economic activities (where turnover is aligned);</inlineHelpText>
    <label>Opex A</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>