main/default/objects/Business_Activity__c/fields/Parent_Business_Activity__c.field-meta.xml
<CustomField>
    <fullName>Parent_Business_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Business Activity</label>
    <referenceTo>Business_Activity__c</referenceTo>
    <relationshipLabel>Business Activities</relationshipLabel>
    <relationshipName>Business_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>