main/default/objects/Business_Activity__c/fields/Turnover_EUR__c.field-meta.xml
<CustomField>
    <fullName>Turnover_EUR__c</fullName>
    <label>Turnover</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>