main/default/objects/Business_Activity__c/listViews/All_Business_Activities.listView-meta.xml
<ListView>
    <fullName>All_Business_Activities</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Type__c</columns>
    <columns>Nace_Activity__c</columns>
    <columns>Status__c</columns>
    <columns>EU_Taxonomy_Disclosure__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Business</value>
    </filters>
    <label>All Business Activities</label>
</ListView>