main/default/objects/Business_Activity__c/listViews/All_Eligible_Economic_Activities.listView-meta.xml
<ListView>
    <fullName>All_Eligible_Economic_Activities</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Parent_Business_Activity__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Linked_Economic_Activity__c</columns>
    <columns>EU_Taxonomy_Disclosure__c</columns>
    <columns>Turnover_EUR__c</columns>
    <columns>Capex_A_EUR__c</columns>
    <columns>Capex_B_EUR__c</columns>
    <columns>Capex_C_EUR__c</columns>
    <columns>Opex_A_EUR__c</columns>
    <columns>Opex_B_EUR__c</columns>
    <columns>Opex_C_EUR__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Economic</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Eligible</value>
    </filters>
    <label>All Eligible Economic Activities</label>
</ListView>